# docs/swagger.json
@@ -38,7 +38,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/app.JobRequest"
+                            "$ref": "#/definitions/types.JobRequest"
                         }
                     }
                 ],
@@ -81,7 +81,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/app.JobListItem"
+                            "$ref": "#/definitions/types.JobListItem"
                         }
                     }
                 }
@@ -89,7 +89,7 @@
         }
     },
     "definitions": {
-        "app.JobError": {
+        "types.JobError": {
             "type": "object",
             "properties": {
                 "code": {
@@ -100,7 +100,7 @@
                 }
             }
         },
-        "app.JobListItem": {
+        "types.JobListItem": {
             "type": "object",
             "properties": {
                 "created_at": {
@@ -110,14 +110,14 @@
                     "type": "string"
                 },
                 "payload": {
-                    "$ref": "#/definitions/app.JobRequest"
+                    "$ref": "#/definitions/types.JobRequest"
                 },
                 "result": {
-                    "$ref": "#/definitions/app.JobResponse"
+                    "$ref": "#/definitions/types.JobResponse"
                 }
             }
         },
-        "app.JobRequest": {
+        "types.JobRequest": {
             "type": "object",
             "required": [
                 "action",
@@ -157,11 +157,11 @@
                 }
             }
         },
-        "app.JobResponse": {
+        "types.JobResponse": {
             "type": "object",
             "properties": {
                 "error": {
-                    "$ref": "#/definitions/app.JobError"
+                    "$ref": "#/definitions/types.JobError"
                 },
                 "status": {
                     "type": "string",
